# quantvault

./: .gitignore  Anchor.toml  Dockerfile.bot  Dockerfile.strategy  README.md  STRATEGY.md  docker-compose.yml  package-lock.json  package.json  tsconfig.json
backtest/: backtest.py
bot/: deposit_devnet_usdc.js  init_drift_user.js  package-lock.json  package.json  tsconfig.json
bot/src/: declarations.d.ts  drift.ts  executor.ts  index.ts  logger.ts  metrics.ts  priority_fees.ts  rebalancer.ts  riskMonitor.ts  strategyClient.ts  vault.ts
bot/tests/: rebalancer.test.ts  strategyClient.test.ts
config/: devnet.ts  mainnet.ts  strategy.yaml
programs/delta-neutral-adaptor/: Cargo.toml
programs/delta-neutral-adaptor/src/: errors.rs  lib.rs  state.rs
programs/delta-neutral-adaptor/src/instructions/: deposit.rs  initialize.rs  mod.rs  update_position.rs  withdraw.rs
scripts/: add_strategies.ts  backtest.py  collect_training_data.py  hourly_report.py  init_drift_user.ts  init_vault.ts  longterm_backtest.py  preflight_check.sh  start_devnet.sh  start_mainnet.sh  train_models.py
strategy/: __init__.py  main.py  requirements.txt
strategy/execution/: fee_model.py  funding_timing.py  margin_health.py  rebalance_engine.py
strategy/models/: __init__.py  hmm_regime.py  kalman_hedge.py  lstm_signal.py
strategy/optimization/: __init__.py  allocation.py
strategy/risk/: __init__.py  circuit_breakers.py  drawdown_control.py  position_limits.py
strategy/signals/: __init__.py  ar_funding_predictor.py  cascade_risk.py  cointegration.py  drift_data.py  funding_features.py  (+5 more)
(+10 files in other folders)
