[package]
name = "delta-neutral-adaptor"
version = "0.1.0"
description = "QuantVault delta-neutral Drift adaptor for Ranger/Voltr vault"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "delta_neutral_adaptor"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.31.1" }

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[workspace]
